# KUKAStarterKit

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
demos/: calibrate_microscope.py  check_poses_in_iris.py  demo_config.py  find_valid_waypoints.py  ik_from_q_z_offset.py  iris_regions.yaml  iris_regions_80.yaml  iris_regions_85.yaml  joint_state_monitor.py  joint_teleop.py  print_last_pos.py  replay_drake_pos.py  replay_drake_torque.py  replay_q_solutions.py  rrt_replay_q_solutions.py  rrt_star_planner.py  scan_object.py  scan_object_and_save_frames.py  scan_object_and_save_frames2.py  teleop.py  test.py  test2.py  test3.py  torque_teleop.py  visualize_iris_regions.py  z_axis_slider.py
iiwa_setup/iiwa/: hardware_station.py
iiwa_setup/motion_planning/: toppra.py
iiwa_setup/util/: traj_planning.py  visualizations.py
microscope_scripts/: camera_calibration.py  camera_calibration_full.py  focus_stack.py  perms.bash  process_scans.py
microscope_scripts/arduino_zoom_controller/: arduino_zoom_controller.ino
microscope_scripts/calibration_data/calibration_results/: camera_calib_intrinsic.npy
microscope_scripts/visualizers/: pose_viewer.py
models/: iiwa14_microscope.dmd.yaml  microscope_mount.sdf
old_demos/: find_best_hemisphere.py  iris_regions_70.yaml  iris_regions_95.yaml  q1_to_q2_w_collision_avoidance.py  q_teleop.py  scan_object.py  show_ik_sols.py
reconstruction/: CHANGES.md  Dockerfile  focus_stack.py  gsplat_viewer.py  main.py  process_scans.py  pyproject.toml  simple_trainer.py  utils.py
reconstruction/configs/: config.yaml
reconstruction/configs/experiment/: mcmc.yaml
reconstruction/configs/strategy/: default.yaml  mcmc.yaml
reconstruction/datasets/: colmap.py  colmap2.py  download_dataset.py
reconstruction/trainer/: __init__.py  config.py  evaluator.py  logger.py  model.py  runner.py
reconstruction/visualizers/: feature_viewer.py
robot_scan/: arduino_serial_test.py  demo_config.py  ik_from_q_z_offset.py  plot_failed_waypoints.py  rrt_replay_q_solutions.py  scan_around_hemisphere.py  scan_object.py
utils/: RRT.py  RRTStar.py  checkerboard_generator.py  iris.py  planning.py  plotting.py  safety.py  sew_stereo.py  states.py  view_state_machine.py  view_waypoints.py
