[tool.poetry]
name = "iiwa-setup"
version = "0.1.0"
description = "iiwa real world setup"
authors = ["Nicholas Pfaff <nepfaff@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
# drake = { ersion = ">=0.0.20250118 <1.0", source = "drake-nightly" }
drake = "1.44.0"
numpy = "^2.0.0"
manipulation = "^2025.3.3"
tqdm = "^4.66.1"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
ipython = "^8.15.0"
pyyaml = "^6.0.1"
scipy = "<1.17"
termcolor = "^3.3.0"
opencv-python = "^4.13.0.92"
pandas = ">=2.0,<3.0"
plotly = "^6.5.2"
huggingface-hub = "^1.7.1"
pyserial = "^3.5"
tyro = "^1.0.12"
imageio = {extras = ["ffmpeg"], version = "^2.37.3"}
viser = "^1.0.26"
torch = "^2.11.0"
tensorboard = "^2.20.0"
tensorly = "^0.9.0"
torchmetrics = {extras = ["image"], version = "^1.9.0"}
scikit-learn = "1.6.1"
splines = "^0.3.3"
pillow = "^12.2.0"
gsplat = "^1.5.3"
torchvision = "^0.26.0"
nerfview = "^0.1.3"
pycolmap = { path = "colmap", develop = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.12.1"
isort = "^5.12.0"
poetry-pre-commit-plugin = "^0.1.2"

[[tool.poetry.source]]
name = "drake-nightly"
url = "https://drake-packages.csail.mit.edu/whl/nightly/"
priority = "supplemental"


[[tool.poetry.source]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"

[tool.isort]
profile = 'black'
lines_between_types = 1
combine_as_imports = true
known_first_party = ['iiwa_setup']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
