[tool.poetry]
name = "KUKAStarterKit"
version = "0.1.0"
description = "iiwa real world setup"
authors = ["Nicholas Pfaff <nepfaff@mit.edu>"]
readme = "README.md"
packages = [{include = "iiwa_setup"}]

[tool.poetry.dependencies]
python = "~3.10"
drake = "1.44.0"
numpy = "^2.0.0"
manipulation = "^2025.3.3"
pyyaml = "^6.0.1"
termcolor = "^3.3.0"
opencv-python = "^4.13.0.92"
pyserial = "^3.5"
matplotlib = ">=3.0"
requests = ">=2.0"
networkx = ">=2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.12.1"
isort = "^5.12.0"
poetry-pre-commit-plugin = "^0.1.2"

[tool.isort]
profile = 'black'
lines_between_types = 1
combine_as_imports = true
known_first_party = ['iiwa_setup']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
